Fix security vulnerabilities with test coverage
Vulnerabilities identified and fixed:

1. Path Traversal (CWE-22): CLI file path args are now validated/normalized
   to prevent directory traversal attacks (e.g., ../../etc/passwd)

2. Input Validation (CWE-20): PARM-DATE parameter now requires strict
   YYYY-MM-DD format validation before use

3. Uncontrolled Resource Consumption (CWE-400): CobolFieldParser now
   enforces 18-digit max length and digit-only validation on numeric fields

4. Information Exposure (CWE-209): Removed e.printStackTrace() that leaked
   internal paths and class structure in error output

5. Sensitive Data in Logs (CWE-532): Removed System.out.println of full
   record data (account IDs, balances) from processing loop

6. Integer Overflow (CWE-190): formatSignedDecimal now validates value
   fits within PIC field capacity before conversion to long

7. Mutable Internal State (CWE-200): getOutputTransactions() now returns
   Collections.unmodifiableList() to prevent external modification

All 82 tests pass (64 original + 18 new security tests).
No functional/output behavior changes — verified by running full test
suite before and after fixes.

Co-Authored-By: rupendrakiran.kota@infosys.com <rupendrakiran.kota@infosys.com>